@@ -1,3 +1,7 @@
+2010-12-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* stk500v2.c (stk500v2_command): Detect warning status codes.
+
 2010-10-22  Nils Springob <nils@nicai-systems.de>
 
 	* serial.h: serial_open() calls will now return -1 on error (no call to exit())
